<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheGimbalStore</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="link_see_all"><u>See All >></u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string name="global_action_settings">Global Settings</string>
    <string name="action_sync_contacts_label">Sync My Contacts</string>
    <string name="action_about_label">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_friend_feeds">Friend Activities</string>
    <string name="show_more">Show More</string>

    <string name="recommend_friend_label">Recommend</string>
    <string name="ask_friend_review_label">Request\nReview</string>
    <string name="ask_friend_label">Ask Friend</string>
    <string name="post_review_label">Post Review</string>


    <string name="feed_item_fragment_title">Product Notification</string>
    <string name="friends_list_fragment_title">Your Commerce Network!</string>

    <string name="sign_in_label">SignIn to store with your credentials</string>
    <string name="sign_in">SignIn</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="store_authenticator_label">StoreAuthentication</string>

    <!-- Adding configuration values that are used as a part of store service -->

    <string name="SERVER_PROTOCOL">https://</string>
    <string name="STORE_SERVICE_HOST">192.168.3.233</string>
    <string name="STORE_SERVLET_CONTEXT_ROOT">/webapp/wcs/stores/servlet</string>
    <string name="MOBILE_ACCESS_CONTROLLER_SERVLET">/F8app</string>
    <string name="ACTIVE_STORE_ID">10151</string>
    <string name="DEFAULT_CATALOG_ID">10001</string>
    <string name="ACTIVE_STORE_LANG_ID">-1</string>
    <string name="GCM_SENDER_ID">667623029279</string>
    <string name="CURRENCY_UNIT">Rs.</string>

    <!-- Adding configuration values that are used as a part of gimbal device service -->
    <string name="GIMBAL_DEVICE_UUID">90031211-3600-0000-0000-000000000000</string>
    <string name="GIMBAL_DEVICE_LAYOUT">m:2-3=0215,i:4-19,i:20-21,i:22-23,p:24-24</string>
    <string name="title_activity_feed_list">FeedListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_products_list">ProductsListActivity</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_store_authenticator">StoreAuthenticatorActivity</string>
    <string name="title_activity_notifications_list">NotificationsListActivity</string>
    <string name="title_activity_promotions">Exciting Offers For you!!</string>

    <string name="user_notification_list_label">Notification from your friends</string>
    <string name="promotions_list_label">Promotions you may like!!</string>

    <string name="best_sellers_list_label">Best Sellers</string>
    <string name="recommendations_list_label">Recommended by friends</string>
    <string name="recently_viewed_list_label">Recently Viewed!!</string>
    <string name="top_browsed_ist_view">Top Selling!!</string>

</resources>
