<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.avnet.gears.codes.gimbal.store.activity.NotificationsListActivity">
    <item
        android:id="@+id/action_sync_contacts"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_sync_contacts_label" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about_label" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_feed_list"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_friend_feeds" />
</menu>
