<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avnet.gears.codes.gimbal.store.activity.ProductsListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ask_friend_button"
            android:text="@string/ask_friend_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/section_label" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/products_list_view"
            android:layout_below="@+id/section_label"
            android:layout_marginTop="30dp"
            android:layout_alignParentStart="true"></ListView>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showMoreBtn"
            android:text="@string/show_more"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</ScrollView>
